--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-f', 'Dockerfile-$PROJECT_ID', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:$SHORT_SHA', '-t',
-            'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:latest', '.','--build-arg','DOCKER_REPO=us-central1-docker.pkg.dev/$PROJECT_ID/utils' ]
+            'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:latest', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:$SHORT_SHA']
