--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,11 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-f', 'Dockerfile-$PROJECT_ID', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:$SHORT_SHA', '-t',
-            'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:latest', '.']
+    args: [ 'build', '-f', 'Dockerfile-$PROJECT_ID', '-t', 'gcr.io/$PROJECT_ID/compute-gpu-monitoring:$SHORT_SHA', '-t',
+            'gcr.io/$PROJECT_ID/compute-gpu-monitoring:latest', '.','--build-arg','DOCKER_REPO=gcr.io/$PROJECT_ID/vision' ]
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:$SHORT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/compute-gpu-monitoring:$SHORT_SHA']
 
-images: ['us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:$SHORT_SHA', 'us-central1-docker.pkg.dev/$PROJECT_ID/utils/compute-gpu-monitoring:latest']
+images: ['gcr.io/$PROJECT_ID/compute-gpu-monitoring:$SHORT_SHA', 'gcr.io/$PROJECT_ID/compute-gpu-monitoring:latest']
+
+timeout: 6000s
